--- a/pages/style.css
+++ b/pages/style.css
@@ -13,21 +13,44 @@ header{
 	padding-left: 2em;
 }
 
-article{
+#splashScreen{
+	display: absolute;
+	margin-top: 5.3em;
+	width: 40%;
+	padding: 3em;
+	margin-left: auto;
+	margin-right: auto;
+	background-color: white;
+	border: blue 3px solid;
+	border-radius: 5px;
+}
+
+#solo, #multi{
+	width: 100%;
+	height: 3em;
+}
+
+#gameScreen{
+	display: none;
 	padding-top: 5em;
 }
 
+#cnvWrap{
+	padding-left: 30%;
+}
+
 canvas{
-	position: fixed;
-	margin-left: auto;
-	margin-right: auto;
-	width: 300px;
-	background-image: url("clock.jpg");
+	border: 7px solid blue;
+	border-radius: 50px 50px 0px 0px;
+	position: absolute;
+	width: 520px;
+	height: 375px;
+	background-image: url("img/clock.jpg");
 }
 
 #letters{
-	position: fixed;	
-	padding-top: 20em;
+	position: absolute;
+	padding-top: 25em;
 }
 
 #letters li{
