--- a/pages/style.css
+++ b/pages/style.css
@@ -21,7 +21,7 @@ header{
 	margin-left: auto;
 	margin-right: auto;
 	background-color: white;
-	border: blue 3px solid;
+	border: darkblue 3px solid;
 	border-radius: 5px;
 }
 
@@ -35,11 +35,11 @@ header{
 }
 
 #cnvWrap{
-	padding-left: 30%;
+	padding-left: 25%;
 }
 
 canvas{
-	border: 7px solid blue;
+	border: 7px solid darkblue;
 	border-radius: 50px 50px 0px 0px;
 	position: absolute;
 	width: 520px;
@@ -49,19 +49,50 @@ canvas{
 
 #letters{
 	position: absolute;
-	padding-top: 25em;
-	padding-left: 30%;
+	padding-top: 23.2em;
+	padding-left: 23.2%;
 }
 
 #letters li{
 	display: inline-block;
+	font-weight: bold;
 	border: 1px solid black;
-	padding: 0.8em;
-	margin: 1em;
+	padding: 0.7em;
+	margin: 0.2em;
 	color: white;
+	font-size: 150%;
 	background-color: darkblue;
 }
 
-#playerInput{
-	padding-top: 30em;
+#vowel, #consonant{
+	background-color: darkblue;
+	color: white;
+	font-size: 200%;
+	margin-top: 15em;
+}
+
+#vowel:hover, #consonant:hover{
+	background-color: blue;
+}
+
+#vowel{
+	margin-left: 9em;
+}
+
+#consonant{
+	margin-left: 4em;
+}
+
+#wordInput{
+	font-size: 200%;
+	margin-left: 8em;
+}
+
+#info{
+	border: 7px solid darkblue;
+	position: absolute;
+	background-color: white;
+	top: 4.6em;
+	left: 0;
+	padding: 0.3em;
 }
